# sam_onnx_cpp

./: CMakeLists.txt  README.md  inference_mac.sh
cmake/: platform.cmake
projects/auto_sam/: edge_sam.py  edge_sam.yaml  sam.py
projects/pie-sam/: main.py  prompts.json  sam.py  sanic_sam.py  utils.py
src/: SAMOnnxRunner.cpp  main.cpp  utils.h
